--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "minhas-financas-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "bootswatch": "^5.3.3",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
@@ -38,3 +40,5 @@
     ]
   }
 }
+
+
